# poulstar-test

./: README.md  m.py  requirements.txt  t.py
.github/workflows/: main.yml  version.py  version.yml
poulstar/: pyproject.toml
poulstar/poulstar/: cli.py  logo.py
